# snooze_plugins

./: .gitignore
.github/: copilot-instructions.md
core/patlite/: README.md  setup.py
core/patlite/patlite/: metadata.yaml  plugin.py
input/pacemaker/: Pipfile
input/relp/: Pipfile  setup.py
input/relp/snooze_relp/: main.py
input/smtp/: Pipfile  README.md  setup.py  snooze-smtp.service
input/smtp/snooze_smtp/: main.py  parser.py
input/smtp/tests/: test_parser.py
input/snmptrap/: Pipfile  setup.py
input/snmptrap/snooze_snmptrap/: main.py
input/syslog/: Pipfile  README.md  setup.py
input/syslog/examples/: client.py
input/syslog/snooze_syslog/: main.py  parser.py  tcp.py  udp.py
inputs/pacemaker/: README.md  setup.py
inputs/pacemaker/snooze_pacemaker/: main.py
inputs/pacemaker/tests/: test_main.py
inputs/relp/: setup.py
inputs/relp/snooze_relp/: main.py
inputs/smtp/: setup.py
inputs/smtp/snooze_smtp/: main.py
inputs/smtp/tests/: test_main.py
inputs/snmptrap/: README.md  setup.py
inputs/snmptrap/examples/: snmptrap.yaml
inputs/snmptrap/snooze_snmptrap/: main.py
inputs/syslog/: Pipfile  README.md  setup.py
inputs/syslog/examples/: syslog.yaml
inputs/syslog/snooze_syslog/: main.py  parser.py
output/googlechat/: .gitignore  Pipfile  README.md  requirements.txt  setup.py
output/jira/: README.md  pyproject.toml
output/mattermost/: README.md  pyproject.toml
output/mattermost/snooze_mattermostbot/: main.py
output/teams/: .gitignore  README.md  pyproject.toml
outputs/googlechat/: Pipfile  setup.py
web/: package.json
(+20 files in other folders)
