[tool.poetry]
name = "snooze_mattermostbot"
version = "0.1.0"
description = "Slack bot for SnoozeWeb"
authors = [
    "Florian Dematraz <florian.dematraz@snoozeweb.net>",
]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.scripts]
snooze-mattermostbot = "snooze_mattermostbot.main:main"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "*"
mattermostdriver = "*"
pyparsing = "*"
python-dateutil = "*"
schedule = "*"
mmpy_bot = "*"
snooze-client = { file = "/home/CORP/florian.dematraz/snoozeweb/snooze_client/dist/snooze_client-1.0.19-py3-none-any.whl" }

[tool.poetry.dev-dependencies]

[tool.poetry.group.test.dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
